[gd_scene load_steps=19 format=3 uid="uid://bv6grq3e8ay6"]

[ext_resource type="Script" path="res://scenes/Entities/Enemies/Roamer/Roamer.gd" id="1_c2bhm"]
[ext_resource type="PackedScene" uid="uid://yoivdmkuokl0" path="res://scenes/Entities/Utils/VelocityComponent.tscn" id="2_ucr6e"]
[ext_resource type="TileSet" uid="uid://dfv51u57k1rem" path="res://tilesets/TestWorld.tres" id="3_ktr68"]
[ext_resource type="Material" uid="uid://clyiv5dbfapk2" path="res://scenes/Entities/Player/PlayerChromAbbShader.tres" id="4_uwrah"]
[ext_resource type="Texture2D" uid="uid://bc6nx8vj8tv2r" path="res://assets/Moth Flying/flying-moth_0001.png" id="5_hngxj"]
[ext_resource type="Texture2D" uid="uid://6kgmynju76tm" path="res://assets/Moth Flying/flying-moth_0004.png" id="6_5dmh3"]
[ext_resource type="Texture2D" uid="uid://drrcgu7apxg1j" path="res://assets/Moth Flying/flying-moth_0006.png" id="7_ru1uv"]
[ext_resource type="Script" path="res://scenes/Utils/AutoplayAnimatedSprite.gd" id="8_td20j"]
[ext_resource type="AudioStream" uid="uid://c7wwap7ebpu1" path="res://assets/audio/sfx/wing_flap.wav" id="9_v2v3t"]
[ext_resource type="PackedScene" uid="uid://4ascxl37t4g1" path="res://scenes/Entities/Utils/EntityGravityArea.tscn" id="10_txlik"]
[ext_resource type="Shape2D" uid="uid://bycfjqp6ee4mx" path="res://scenes/Entities/Player/PlayerCapsulShape.tres" id="11_acwt6"]
[ext_resource type="Script" path="res://scenes/Utils/RandColorLight.gd" id="12_wipv5"]
[ext_resource type="PackedScene" uid="uid://c3qn2hllt3wn7" path="res://scenes/Entities/Utils/LightDecayComponent.tscn" id="13_smubi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uyvyt"]
radius = 25.0
height = 66.0

[sub_resource type="SpriteFrames" id="SpriteFrames_focnk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_hngxj")
}, {
"duration": 1.0,
"texture": ExtResource("6_5dmh3")
}, {
"duration": 1.0,
"texture": ExtResource("7_ru1uv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mw44x"]

[sub_resource type="Gradient" id="Gradient_2kxv7"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.00333333, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.513233, 0.513233, 0.513233, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3xlt7"]
gradient = SubResource("Gradient_2kxv7")
width = 500
height = 500
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.474359, 0.0683761)

[node name="Roamer" type="CharacterBody2D"]
position = Vector2(0, 1)
script = ExtResource("1_c2bhm")

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("Entity") instance=ExtResource("2_ucr6e")]
Entity = NodePath("..")
SpeedMultiplier = 40
MaxVelocity = 500
OverspeedDamping = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(-2, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uyvyt")
debug_color = Color(0.720929, 0.349771, 0.830467, 0.42)

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource("3_ktr68")
format = 2
layer_0/tile_data = PackedInt32Array(-393224, 0, 0, -327688, 0, 1, -262152, 0, 2, -196616, 0, 3, -131080, 0, 4, -65544, 0, 5, -8, 0, 6, 65528, 0, 7, 131064, 0, 8, 196600, 0, 9, 262136, 0, 10, 327672, 0, 11, 393208, 0, 12, 458744, 0, 13, 524280, 0, 14, 589816, 0, 15, -393223, 65536, 0, -327687, 65536, 1, -262151, 65536, 2, -196615, 65536, 3, -131079, 65536, 4, -65543, 65536, 5, -7, 65536, 6, 65529, 65536, 7, 131065, 65536, 8, 196601, 65536, 9, 262137, 65536, 10, 327673, 65536, 11, 393209, 65536, 12, 458745, 65536, 13, 524281, 65536, 14, 589817, 65536, 15, -393222, 131072, 0, -327686, 131072, 1, -262150, 131072, 2, -196614, 131072, 3, -131078, 131072, 4, -65542, 131072, 5, -6, 131072, 6, 65530, 131072, 7, 131066, 131072, 8, 196602, 131072, 9, 262138, 131072, 10, 327674, 131072, 11, 393210, 131072, 12, 458746, 131072, 13, 524282, 131072, 14, 589818, 131072, 15, -393221, 196608, 0, -327685, 196608, 1, -262149, 196608, 2, -196613, 196608, 3, -131077, 196608, 4, -65541, 196608, 5, -5, 196608, 6, 65531, 196608, 7, 131067, 196608, 8, 196603, 196608, 9, 262139, 196608, 10, 327675, 196608, 11, 393211, 196608, 12, 458747, 196608, 13, 524283, 196608, 14, 589819, 196608, 15, -393220, 262144, 0, -327684, 262144, 1, -262148, 262144, 2, -196612, 262144, 3, -131076, 262144, 4, -65540, 262144, 5, -4, 262144, 6, 65532, 262144, 7, 131068, 262144, 8, 196604, 262144, 9, 262140, 262144, 10, 327676, 262144, 11, 393212, 262144, 12, 458748, 262144, 13, 524284, 262144, 14, 589820, 262144, 15, -393219, 327680, 0, -327683, 327680, 1, -262147, 327680, 2, -196611, 327680, 3, -131075, 327680, 4, -65539, 327680, 5, -3, 327680, 6, 65533, 327680, 7, 131069, 327680, 8, 196605, 327680, 9, 262141, 327680, 10, 327677, 327680, 11, 393213, 327680, 12, 458749, 327680, 13, 524285, 327680, 14, 589821, 327680, 15, -393218, 393216, 0, -327682, 393216, 1, -262146, 393216, 2, -196610, 393216, 3, -131074, 393216, 4, -65538, 393216, 5, -2, 393216, 6, 65534, 393216, 7, 131070, 393216, 8, 196606, 393216, 9, 262142, 393216, 10, 327678, 393216, 11, 393214, 393216, 12, 458750, 393216, 13, 524286, 393216, 14, 589822, 393216, 15, -393217, 458752, 0, -327681, 458752, 1, -262145, 458752, 2, -196609, 458752, 3, -131073, 458752, 4, -65537, 458752, 5, -1, 458752, 6, 65535, 458752, 7, 131071, 458752, 8, 196607, 458752, 9, 262143, 458752, 10, 327679, 458752, 11, 393215, 458752, 12, 458751, 458752, 13, 524287, 458752, 14, 589823, 458752, 15, -458752, 524288, 0, -393216, 524288, 1, -327680, 524288, 2, -262144, 524288, 3, -196608, 524288, 4, -131072, 524288, 5, -65536, 524288, 6, 0, 524288, 7, 65536, 524288, 8, 131072, 524288, 9, 196608, 524288, 10, 262144, 524288, 11, 327680, 524288, 12, 393216, 524288, 13, 458752, 524288, 14, 524288, 524288, 15, -458751, 589824, 0, -393215, 589824, 1, -327679, 589824, 2, -262143, 589824, 3, -196607, 589824, 4, -131071, 589824, 5, -65535, 589824, 6, 1, 589824, 7, 65537, 589824, 8, 131073, 589824, 9, 196609, 589824, 10, 262145, 589824, 11, 327681, 589824, 12, 393217, 589824, 13, 458753, 589824, 14, 524289, 589824, 15, -458750, 655360, 0, -393214, 655360, 1, -327678, 655360, 2, -262142, 655360, 3, -196606, 655360, 4, -131070, 655360, 5, -65534, 655360, 6, 2, 655360, 7, 65538, 655360, 8, 131074, 655360, 9, 196610, 655360, 10, 262146, 655360, 11, 327682, 655360, 12, 393218, 655360, 13, 458754, 655360, 14, 524290, 655360, 15, -458749, 720896, 0, -393213, 720896, 1, -327677, 720896, 2, -262141, 720896, 3, -196605, 720896, 4, -131069, 720896, 5, -65533, 720896, 6, 3, 720896, 7, 65539, 720896, 8, 131075, 720896, 9, 196611, 720896, 10, 262147, 720896, 11, 327683, 720896, 12, 393219, 720896, 13, 458755, 720896, 14, 524291, 720896, 15, -458748, 786432, 0, -393212, 786432, 1, -327676, 786432, 2, -262140, 786432, 3, -196604, 786432, 4, -131068, 786432, 5, -65532, 786432, 6, 4, 786432, 7, 65540, 786432, 8, 131076, 786432, 9, 196612, 786432, 10, 262148, 786432, 11, 327684, 786432, 12, 393220, 786432, 13, 458756, 786432, 14, 524292, 786432, 15, -458747, 851968, 0, -393211, 851968, 1, -327675, 851968, 2, -262139, 851968, 3, -196603, 851968, 4, -131067, 851968, 5, -65531, 851968, 6, 5, 851968, 7, 65541, 851968, 8, 131077, 851968, 9, 196613, 851968, 10, 262149, 851968, 11, 327685, 851968, 12, 393221, 851968, 13, 458757, 851968, 14, 524293, 851968, 15, -458746, 917504, 0, -393210, 917504, 1, -327674, 917504, 2, -262138, 917504, 3, -196602, 917504, 4, -131066, 917504, 5, -65530, 917504, 6, 6, 917504, 7, 65542, 917504, 8, 131078, 917504, 9, 196614, 917504, 10, 262150, 917504, 11, 327686, 917504, 12, 393222, 917504, 13, 458758, 917504, 14, 524294, 917504, 15, -458745, 983040, 0, -393209, 983040, 1, -327673, 983040, 2, -262137, 983040, 3, -196601, 983040, 4, -131065, 983040, 5, -65529, 983040, 6, 7, 983040, 7, 65543, 983040, 8, 131079, 983040, 9, 196615, 983040, 10, 262151, 983040, 11, 327687, 983040, 12, 393223, 983040, 13, 458759, 983040, 14, 524295, 983040, 15, -458744, 0, 0, -393208, 0, 1, -327672, 0, 2, -262136, 0, 3, -196600, 0, 4, -131064, 0, 5, -65528, 0, 6, 8, 0, 7, 65544, 0, 8, 131080, 0, 9, 196616, 0, 10, 262152, 0, 11, 327688, 0, 12, 393224, 0, 13, 458760, 0, 14, 524296, 0, 15, -458743, 65536, 0, -393207, 65536, 1, -327671, 65536, 2, -262135, 65536, 3, -196599, 65536, 4, -131063, 65536, 5, -65527, 65536, 6, 9, 65536, 7, 65545, 65536, 8, 131081, 65536, 9, 196617, 65536, 10, 262153, 65536, 11, 327689, 65536, 12, 393225, 65536, 13, 458761, 65536, 14, 524297, 65536, 15, -458742, 131072, 0, -393206, 131072, 1, -327670, 131072, 2, -262134, 131072, 3, -196598, 131072, 4, -131062, 131072, 5, -65526, 131072, 6, 10, 131072, 7, 65546, 131072, 8, 131082, 131072, 9, 196618, 131072, 10, 262154, 131072, 11, 327690, 131072, 12, 393226, 131072, 13, 458762, 131072, 14, 524298, 131072, 15, -458741, 196608, 0, -393205, 196608, 1, -327669, 196608, 2, -262133, 196608, 3, -196597, 196608, 4, -131061, 196608, 5, -65525, 196608, 6, 11, 196608, 7, 65547, 196608, 8, 131083, 196608, 9, 196619, 196608, 10, 262155, 196608, 11, 327691, 196608, 12, 393227, 196608, 13, 458763, 196608, 14, 524299, 196608, 15, -458740, 262144, 0, -393204, 262144, 1, -327668, 262144, 2, -262132, 262144, 3, -196596, 262144, 4, -131060, 262144, 5, -65524, 262144, 6, 12, 262144, 7, 65548, 262144, 8, 131084, 262144, 9, 196620, 262144, 10, 262156, 262144, 11, 327692, 262144, 12, 393228, 262144, 13, 458764, 262144, 14, 524300, 262144, 15, -458739, 327680, 0, -393203, 327680, 1, -327667, 327680, 2, -262131, 327680, 3, -196595, 327680, 4, -131059, 327680, 5, -65523, 327680, 6, 13, 327680, 7, 65549, 327680, 8, 131085, 327680, 9, 196621, 327680, 10, 262157, 327680, 11, 327693, 327680, 12, 393229, 327680, 13, 458765, 327680, 14, 524301, 327680, 15, -458738, 393216, 0, -393202, 393216, 1, -327666, 393216, 2, -262130, 393216, 3, -196594, 393216, 4, -131058, 393216, 5, -65522, 393216, 6, 14, 393216, 7, 65550, 393216, 8, 131086, 393216, 9, 196622, 393216, 10, 262158, 393216, 11, 327694, 393216, 12, 393230, 393216, 13, 458766, 393216, 14, 524302, 393216, 15, -458737, 458752, 0, -393201, 458752, 1, -327665, 458752, 2, -262129, 458752, 3, -196593, 458752, 4, -131057, 458752, 5, -65521, 458752, 6, 15, 458752, 7, 65551, 458752, 8, 131087, 458752, 9, 196623, 458752, 10, 262159, 458752, 11, 327695, 458752, 12, 393231, 458752, 13, 458767, 458752, 14, 524303, 458752, 15, -458736, 524288, 0, -393200, 524288, 1, -327664, 524288, 2, -262128, 524288, 3, -196592, 524288, 4, -131056, 524288, 5, -65520, 524288, 6, 16, 524288, 7, 65552, 524288, 8, 131088, 524288, 9, 196624, 524288, 10, 262160, 524288, 11, 327696, 524288, 12, 393232, 524288, 13, 458768, 524288, 14, 524304, 524288, 15, -458735, 589824, 0, -393199, 589824, 1, -327663, 589824, 2, -262127, 589824, 3, -196591, 589824, 4, -131055, 589824, 5, -65519, 589824, 6, 17, 589824, 7, 65553, 589824, 8, 131089, 589824, 9, 196625, 589824, 10, 262161, 589824, 11, 327697, 589824, 12, 393233, 589824, 13, 458769, 589824, 14, 524305, 589824, 15, -458734, 655360, 0, -393198, 655360, 1, -327662, 655360, 2, -262126, 655360, 3, -196590, 655360, 4, -131054, 655360, 5, -65518, 655360, 6, 18, 655360, 7, 65554, 655360, 8, 131090, 655360, 9, 196626, 655360, 10, 262162, 655360, 11, 327698, 655360, 12, 393234, 655360, 13, 458770, 655360, 14, 524306, 655360, 15, -458733, 720896, 0, -393197, 720896, 1, -327661, 720896, 2, -262125, 720896, 3, -196589, 720896, 4, -131053, 720896, 5, -65517, 720896, 6, 19, 720896, 7, 65555, 720896, 8, 131091, 720896, 9, 196627, 720896, 10, 262163, 720896, 11, 327699, 720896, 12, 393235, 720896, 13, 458771, 720896, 14, 524307, 720896, 15, -458732, 786432, 0, -393196, 786432, 1, -327660, 786432, 2, -262124, 786432, 3, -196588, 786432, 4, -131052, 786432, 5, -65516, 786432, 6, 20, 786432, 7, 65556, 786432, 8, 131092, 786432, 9, 196628, 786432, 10, 262164, 786432, 11, 327700, 786432, 12, 393236, 786432, 13, 458772, 786432, 14, 524308, 786432, 15, -458731, 851968, 0, -393195, 851968, 1, -327659, 851968, 2, -262123, 851968, 3, -196587, 851968, 4, -131051, 851968, 5, -65515, 851968, 6, 21, 851968, 7, 65557, 851968, 8, 131093, 851968, 9, 196629, 851968, 10, 262165, 851968, 11, 327701, 851968, 12, 393237, 851968, 13, 458773, 851968, 14, 524309, 851968, 15, -458730, 917504, 0, -393194, 917504, 1, -327658, 917504, 2, -262122, 917504, 3, -196586, 917504, 4, -131050, 917504, 5, -65514, 917504, 6, 22, 917504, 7, 65558, 917504, 8, 131094, 917504, 9, 196630, 917504, 10, 262166, 917504, 11, 327702, 917504, 12, 393238, 917504, 13, 458774, 917504, 14, 524310, 917504, 15, -458729, 983040, 0, -393193, 983040, 1, -327657, 983040, 2, -262121, 983040, 3, -196585, 983040, 4, -131049, 983040, 5, -65513, 983040, 6, 23, 983040, 7, 65559, 983040, 8, 131095, 983040, 9, 196631, 983040, 10, 262167, 983040, 11, 327703, 983040, 12, 393239, 983040, 13, 458775, 983040, 14, 524311, 983040, 15)

[node name="CanvasModulate" type="CanvasModulate" parent="TileMap"]
visible = false
color = Color(0.0142752, 0.0142752, 0.0142752, 1)

[node name="FlippingSprite" type="AnimatedSprite2D" parent="."]
material = ExtResource("4_uwrah")
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_focnk")
script = ExtResource("8_td20j")

[node name="WingFlap" type="AudioStreamPlayer2D" parent="FlippingSprite"]
stream = ExtResource("9_v2v3t")

[node name="GravityArea" parent="." node_paths=PackedStringArray("Entity") instance=ExtResource("10_txlik")]
Entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityArea"]
position = Vector2(-2, 2)
rotation = 1.5708
shape = ExtResource("11_acwt6")

[node name="RandColorLight" type="PointLight2D" parent="."]
z_index = -2
material = SubResource("ShaderMaterial_mw44x")
position = Vector2(5, 0)
scale = Vector2(0.4, 0.4)
color = Color(0.0980392, 0.431373, 0.345098, 0.941176)
energy = 0.2
texture = SubResource("GradientTexture2D_3xlt7")
script = ExtResource("12_wipv5")

[node name="LightDecayComponent" parent="RandColorLight" instance=ExtResource("13_smubi")]
